kubernetes/apps/downloads/sonarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: downloads
  annotations:
    external-dns.alpha.kubernetes.io/exclude: "true"
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - "sonarr.${SECRET_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 80
